[test] : 메뉴 옵션 테스트 완료 및 메뉴-메뉴옵션 순환 참조 문제 해결